--- a/DelgruppB - Bagare/DelgruppB - Bagare.csproj
+++ b/DelgruppB - Bagare/DelgruppB - Bagare.csproj
@@ -44,17 +44,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Beeper.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Generator.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queue.cs" />
     <Compile Include="Sound.cs" />
+    <Compile Include="Timestamp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="audio\beep1.wav" />
+    <Content Include="audio\Coin.wav" />
+    <Content Include="audio\Heal.wav" />
+    <Content Include="audio\Inception.mp3" />
+    <Content Include="audio\Italy.wav" />
+    <Content Include="audio\Space.wav" />
     <Content Include="_anteckingar.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="helper\" />
+    <Folder Include="psuedodata\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
